--- a/微信项目/发现.css
+++ b/微信项目/发现.css
@@ -69,7 +69,7 @@ p{
     width: 100%;
     /*color: #B9B9B9;*/
     position: fixed;
-    top: 611px;
+    bottom: 0px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
