--- a/微信项目/我.css
+++ b/微信项目/我.css
@@ -78,7 +78,7 @@ p{
     width: 100%;
     /*color: #B9B9B9;*/
     position: fixed;
-    top: 611px;
+    bottom: 0px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
