--- a/微信项目/通讯录.css
+++ b/微信项目/通讯录.css
@@ -92,7 +92,7 @@ h5{
     width: 100%;
     /*color: #B9B9B9;*/
     position: fixed;
-    top: 611px;
+    bottom: 0px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
